--- a/src/style.css
+++ b/src/style.css
@@ -87,6 +87,8 @@ h5 {
 h4.appeal-description {
   margin: 20px auto;
   font-weight: 500;
+  font-family: "Nunito", sans-serif;
+  line-height: 30px;
   font-size: 21px;
   text-align: center;
   max-width: 800px;
@@ -95,11 +97,13 @@ h4.appeal-description {
 
 .form-control {
   border-radius: 2px;
+  padding: 15px;
 }
 
 .banAppealFormTitle {
   color: var(--main-color);
-  font-weight: 600;
+  font-weight: 300;
+  font-size: 21px;
 }
 
 .appealForm {
@@ -109,8 +113,9 @@ h4.appeal-description {
 }
 
 .submitButton{
-  padding:15px 20px;
+  padding:15px 35px;
   margin:10px;
+  font-size: 20px;
   color: var(--main-color);
   font-weight: 600;
   background: none;
@@ -121,17 +126,27 @@ h4.appeal-description {
 .submitButton:hover{
   background:var(--main-color);
   color:var(--og-background);
-  transition: all 200ms ease-in-out;
+  transition: all 250ms ease-in-out;
 }
 
 .trackButton{
-  padding:15px 20px;
+  padding:15px 35px;
   margin:10px;
+  
+  font-size: 20px;
   color: var(--main-color);
   font-weight: 600;
-  background: none;
+  background: #1E2758;
   border:solid white 2px;
+  text-decoration: none;
   border-radius: 4px;
+}
+.trackButton:hover{
+  text-decoration:underline ;
+}
+.trackDescription{
+  color: aliceblue;
+  font-size: 18px;
 }
 .copyright {
   font-family: "Roboto", sans-serif;
@@ -186,12 +201,18 @@ h4.appeal-description {
 }
 
 .nav-link {
-  color: #e1e1e1;
+  color: #e1e1e1cc;
   font-family: "Nunito", sans-serif;
   line-height: 30px;
   font-size: 16px;
   margin: 10px;
   font-weight: 600;
+}
+
+.nav-link:hover{
+  color:white;
+  font-weight: 800;
+  text-decoration: underline;
 }
 
 .bodySection img {
@@ -215,7 +236,13 @@ h4.appeal-description {
 }
 
 .authorNote {
-  color: #000;
+  color: var(--main-color);
+  text-decoration: none;
+}
+
+.open-source{
+  color: var(--sec-color);
+  font-size: 10px;
 }
 
 nav .container-fluid {
