--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ h5 {
 h1 {
   font-size: 62px;
   text-align: center;
+  margin: 50px;
 }
 
 h2 {
@@ -31,6 +32,7 @@ h2 {
 
 h3 {
   font-size: 36px;
+  text-align: center;
 }
 
 h6 {
@@ -42,6 +44,7 @@ p {
   font-family: "Nunito", sans-serif;
   line-height: 30px;
   font-size: 16px;
+  color: var(--main-color)
 }
 
 ul {
@@ -65,6 +68,11 @@ li {
   padding: 0;
 }
 
+.header h1{
+  margin:20px;
+  color: var(--main-color);
+}
+
 .brandName {
   font-size: 24px;
   font-weight: 700;
@@ -79,12 +87,17 @@ h6.contactTitles {
   font-family: "Nunito", sans-serif;
 }
 
-.header h1,
-h5 {
-  color: white;
+
+.faqQAndA{
+  margin-bottom: 30px;
+  text-align: left;
 }
 
-h4.appeal-description, h4 {
+.faqQAndA p{
+  line-height: 50px;
+}
+
+h4.appeal-description {
   margin: 20px auto;
   font-weight: 500;
   font-family: "Nunito", sans-serif;
